Bug 298633 - KDE Deamon crashed on wake-up from Suspend to RAM
Summary: KDE Deamon crashed on wake-up from Suspend to RAM
Status: RESOLVED FIXED
Alias: None
Product: solid
Classification: Unmaintained
Component: bluetooth (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Alex Fiestas
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-04-23 04:18 UTC by Arne Henningsen
Modified: 2012-04-26 04:07 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Arne Henningsen 2012-04-23 04:18:59 UTC
Application: kded4 ($Id$)
KDE Platform Version: 4.7.4 (4.7.4)
Qt Version: 4.7.4
Operating System: Linux 3.0.0-17-generic x86_64
Distribution: Ubuntu 11.10

-- Information about the crash:
I woke up my computer (HP EliteBook 8560w) from Suspend to RAM, entered my password, and then I saw the Crash Reporting Assistant saying that the KDE Deamon has crashed. Though, I have not experienced any problems or unusual behaviour yet.

-- Backtrace:
Application: KDE Daemon (kdeinit4), signal: Floating point exception
[Current thread is 1 (Thread 0x7f6dfce37780 (LWP 2728))]

Thread 5 (Thread 0x7f6de1a07700 (LWP 2736)):
#0  0x00007f6dfa694473 in __GI___poll (fds=<optimized out>, nfds=<optimized out>, timeout=<optimized out>) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007f6df7892f68 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f6df7893429 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f6dfbadcf3e in QEventDispatcherGlib::processEvents (this=0x28237d0, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:424
#4  0x00007f6dfbab0cf2 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007f6dfbab0ef7 in QEventLoop::exec (this=0x7f6de1a06d10, flags=...) at kernel/qeventloop.cpp:201
#6  0x00007f6dfb9c827f in QThread::exec (this=<optimized out>) at thread/qthread.cpp:498
#7  0x00007f6dfba93cbf in QInotifyFileSystemWatcherEngine::run (this=0x281fe80) at io/qfilesystemwatcher_inotify.cpp:248
#8  0x00007f6dfb9cad05 in QThreadPrivate::start (arg=0x281fe80) at thread/qthread_unix.cpp:331
#9  0x00007f6decd2b56c in ?? () from /usr/lib/nvidia-current/libGL.so.1
#10 0x00007f6df815cefc in start_thread (arg=0x7f6de1a07700) at pthread_create.c:304
#11 0x00007f6dfa6a059d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#12 0x0000000000000000 in ?? ()

Thread 4 (Thread 0x7f6de1206700 (LWP 2778)):
#0  0x00007f6dfa699613 in select () at ../sysdeps/unix/syscall-template.S:82
#1  0x00007f6dfba93671 in QProcessManager::run (this=0x7f6dfbde5580) at io/qprocess_unix.cpp:245
#2  0x00007f6dfb9cad05 in QThreadPrivate::start (arg=0x7f6dfbde5580) at thread/qthread_unix.cpp:331
#3  0x00007f6decd2b56c in ?? () from /usr/lib/nvidia-current/libGL.so.1
#4  0x00007f6df815cefc in start_thread (arg=0x7f6de1206700) at pthread_create.c:304
#5  0x00007f6dfa6a059d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#6  0x0000000000000000 in ?? ()

Thread 3 (Thread 0x7f6dd93c0700 (LWP 3745)):
#0  0x00007f6dfa694473 in __GI___poll (fds=<optimized out>, nfds=<optimized out>, timeout=<optimized out>) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007f6df7892f68 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f6df7893792 in g_main_loop_run () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f6dd969d516 in ?? () from /usr/lib/x86_64-linux-gnu/libgio-2.0.so.0
#4  0x00007f6df78b82b6 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f6decd2b56c in ?? () from /usr/lib/nvidia-current/libGL.so.1
#6  0x00007f6df815cefc in start_thread (arg=0x7f6dd93c0700) at pthread_create.c:304
#7  0x00007f6dfa6a059d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#8  0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7f6de2208700 (LWP 8192)):
#0  __libc_enable_asynccancel () at ../nptl/sysdeps/unix/sysv/linux/x86_64/cancellation.S:58
#1  0x00007f6dfa694458 in __GI___poll (fds=<optimized out>, nfds=<optimized out>, timeout=<optimized out>) at ../sysdeps/unix/sysv/linux/poll.c:85
#2  0x00007f6df7892f68 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f6df7893429 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f6dfbadcf3e in QEventDispatcherGlib::processEvents (this=0x45953b0, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:424
#5  0x00007f6dfbab0cf2 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#6  0x00007f6dfbab0ef7 in QEventLoop::exec (this=0x7f6de2207d40, flags=...) at kernel/qeventloop.cpp:201
#7  0x00007f6dfb9c827f in QThread::exec (this=<optimized out>) at thread/qthread.cpp:498
#8  0x00007f6dfb9cad05 in QThreadPrivate::start (arg=0x4653df0) at thread/qthread_unix.cpp:331
#9  0x00007f6decd2b56c in ?? () from /usr/lib/nvidia-current/libGL.so.1
#10 0x00007f6df815cefc in start_thread (arg=0x7f6de2208700) at pthread_create.c:304
#11 0x00007f6dfa6a059d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#12 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f6dfce37780 (LWP 2728)):
[KCrash Handler]
#6  0x00007f6dfb9e6748 in QHashData::nextNode (node=0x8fe6ec0) at tools/qhash.cpp:293
#7  0x00007f6de2900773 in ObexFtpDaemon::offlineMode() () from /usr/lib/kde4/kded_obexftpdaemon.so
#8  0x00007f6de28fee88 in ObexFtpDaemon::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib/kde4/kded_obexftpdaemon.so
#9  0x00007f6dfbac4eba in QMetaObject::activate (sender=0x280c490, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fffdfae4000) at kernel/qobject.cpp:3278
#10 0x00007f6de26ce322 in BlueDevil::Manager::defaultAdapterChanged(BlueDevil::Adapter*) () from /usr/lib/libbluedevil.so.1
#11 0x00007f6de26cf603 in BlueDevil::Manager::Private::_k_adapterRemoved(QDBusObjectPath const&) () from /usr/lib/libbluedevil.so.1
#12 0x00007f6de26d1a9e in BlueDevil::Manager::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib/libbluedevil.so.1
#13 0x00007f6dfbac4eba in QMetaObject::activate (sender=0x2815cb0, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fffdfae4140) at kernel/qobject.cpp:3278
#14 0x00007f6de26e4375 in ?? () from /usr/lib/libbluedevil.so.1
#15 0x00007f6de26e46dc in ?? () from /usr/lib/libbluedevil.so.1
#16 0x00007f6df90830e9 in QDBusConnectionPrivate::deliverCall (this=0x2810200, object=0x2815cb0, msg=..., metaTypes=..., slotIdx=6) at qdbusintegrator.cpp:942
#17 0x00007f6df908c38f in QDBusCallDeliveryEvent::placeMetaCall (this=<optimized out>, object=<optimized out>) at qdbusintegrator_p.h:103
#18 0x00007f6dfbac8a5e in QObject::event (this=0x2815cb0, e=<optimized out>) at kernel/qobject.cpp:1217
#19 0x00007f6dfae61474 in notify_helper (e=0x8fe7770, receiver=0x2815cb0, this=0x25d3390) at kernel/qapplication.cpp:4486
#20 QApplicationPrivate::notify_helper (this=0x25d3390, receiver=0x2815cb0, e=0x8fe7770) at kernel/qapplication.cpp:4458
#21 0x00007f6dfae662e1 in QApplication::notify (this=0x7fffdfae4c80, receiver=0x2815cb0, e=0x8fe7770) at kernel/qapplication.cpp:4365
#22 0x00007f6dfc81f466 in KApplication::notify (this=0x7fffdfae4c80, receiver=0x2815cb0, event=0x8fe7770) at ../../kdeui/kernel/kapplication.cpp:311
#23 0x00007f6dfbab1afc in QCoreApplication::notifyInternal (this=0x7fffdfae4c80, receiver=0x2815cb0, event=0x8fe7770) at kernel/qcoreapplication.cpp:787
#24 0x00007f6dfbab551f in sendEvent (event=0x8fe7770, receiver=0x2815cb0) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#25 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x25235e0) at kernel/qcoreapplication.cpp:1428
#26 0x00007f6dfbadca73 in sendPostedEvents () at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:220
#27 postEventSourceDispatch (s=<optimized out>) at kernel/qeventdispatcher_glib.cpp:277
#28 0x00007f6df7892a5d in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#29 0x00007f6df7893258 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#30 0x00007f6df7893429 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#31 0x00007f6dfbadced6 in QEventDispatcherGlib::processEvents (this=0x2525d30, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:422
#32 0x00007f6dfaf0910e in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=<optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#33 0x00007f6dfbab0cf2 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#34 0x00007f6dfbab0ef7 in QEventLoop::exec (this=0x7fffdfae4c10, flags=...) at kernel/qeventloop.cpp:201
#35 0x00007f6dfbab5789 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1064
#36 0x00007f6de8dd1d65 in kdemain (argc=1, argv=0x2650440) at ../../kded/kded.cpp:924
#37 0x0000000000408547 in launch (argc=1, _name=0x40b2d7 "kded4", args=<optimized out>, cwd=0x0, envc=<optimized out>, envs=<optimized out>, reset_env=false, tty=0x0, avoid_loops=false, startup_id_str=0x40b15e "0") at ../../kinit/kinit.cpp:746
#38 0x0000000000405949 in main (argc=4, argv=0x7fff00000001, envp=0x7fffdfae5de0) at ../../kinit/kinit.cpp:1861

Possible duplicates by query: bug 282280, bug 250276.

Reported using DrKonqi
Comment 1 Arne Henningsen 2012-04-23 12:21:39 UTC
I noticed that I browsed the memory card of my mobile phone via bluetooth in Dolphin, when I suspended the computer. When I resumed the computer, the mobile phone was not present. Perhaps this helps you to find the bug...
Comment 2 Alex Fiestas 2012-04-26 04:06:44 UTC
Git commit fa722d611c661509d8fd819f484cc748d060e8b3 by Alex Fiestas.
Committed on 26/04/2012 at 06:39.
Pushed by afiestas into branch '1.0'.

Cleanly remove all ObexSession

M  +6    -9    src/daemon/obexftpkded/ObexFtpDaemon.cpp

http://commits.kde.org/bluedevil/fa722d611c661509d8fd819f484cc748d060e8b3
Comment 3 Alex Fiestas 2012-04-26 04:07:48 UTC
Git commit f769a3534eb4e3eed644b69c73dcb21a44b487cc by Alex Fiestas.
Committed on 26/04/2012 at 06:39.
Pushed by afiestas into branch '1.1'.

Cleanly remove all ObexSession
(cherry picked from commit fa722d611c661509d8fd819f484cc748d060e8b3)

M  +6    -9    src/daemon/obexftpkded/ObexFtpDaemon.cpp

http://commits.kde.org/bluedevil/f769a3534eb4e3eed644b69c73dcb21a44b487cc