Cleanly remove all ObexSession

BUG: 298633